# sysprobe

./: .gitignore  Cargo.toml  README.md
.agent/: ARCHITECTURE.md  CODEX_PROMPTS.md  ROADMAP.md
.github/workflows/: ci.yml
config/: sysprobe.example.toml
src/: alert.rs  cli.rs  config.rs  daemon.rs  error.rs  export.rs  history.rs  main.rs  snapshot.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  network_proc.rs  processes.rs
src/ui/: dashboard.rs  mod.rs  sparkline.rs  table.rs
tests/: snapshot_tests.rs
