[package]
name = "sysprobe"
version = "0.1.0"
edition = "2021"
description = "Terminal system intelligence: CPU, RAM, disk, network, processes, alerts, live TUI."
license = "MIT"

[dependencies]
sysinfo = "0.31"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
